# Lume

./: .gitignore  CHANGELOG.md  Cargo.toml  Readme.md
.github/workflows/: test.yml
docs/: advanced.md  cookbook.md  defaults-auto-increment.md  filters.md  getting-started.md  index.md  inserts-updates.md  joins.md  queries.md  schema.md
scripts/: test.sh
src/: helpers.rs  lib.rs  main.rs
src/database/: error.rs  mod.rs
src/dialects/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/filter/: filters.rs  mod.rs
src/operations/: delete.rs  insert.rs  mod.rs  query.rs  update.rs
src/row/: mod.rs
src/schema/: column.rs  constraints.rs  default.rs  macros.rs  mod.rs  uuid.rs  validators.rs  value.rs
src/table/: mod.rs
src/tests/: database.rs  mod.rs  query.rs
