[package]
name = "lume"
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["You guru911u@gmail.com"]
keywords = ["orm", "erganomic", "schema-builder", "query-builder", "database"]
categories = ["database-implementations"]
repository = "https://github.com/guru901/lume"
exclude = ["tests/*", "docs/*", "CONTRIBUTING.md", "CHANGELOG.md", ".github", "scripts"]
description = "A simple and intuitive Query Builder inspired by Drizzle"

[dependencies]
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
