[package]
name = "lume"
version = "0.12.0"
edition = "2024"
license = "MIT"
authors = ["You guru911u@gmail.com"]
keywords = ["orm", "type-safety", "schema-builder", "query-builder", "database"]
categories = ["database-implementations"]
repository = "https://github.com/guru901/lume"
exclude = ["tests/*", "docs/*", "CONTRIBUTING.md", "CHANGELOG.md", ".github", "scripts"]
description = "A simple and intuitive Query Builder inspired by Drizzle"

[dependencies]
paste = "1.0.15"
regex = "1.12.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls"], default-features = false, optional = false }
time = {version = "0.3.44", features = ["macros", "formatting"]}
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
test_retry = "0.1.0"

[features]
default = ["mysql"]
mysql = ["sqlx/mysql", "sqlx/runtime-tokio"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio"]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]
